# Mneme

./: CMakeLists.txt  README.md
cmake/: RRConfig.cmake.in  SetupLLVM.cmake
code_extract/: .gitignore  CMakeLists.txt  build_from_bench.py  run_tests.py
code_extract/include/: CodeDB.h  ToolManager.h  VisitManager.h  Visitor.h
code_extract/src/: ToolManager.cpp  VisitManager.cpp  Visitor.cpp  code_extract.cpp
code_extract/tests/HeCBench_ace_cuda/: Makefile
code_extract/tests/dummy_proj/: CMakeLists.txt
code_extract/tests/dummy_proj/include/: A.h
code_extract/tests/dummy_proj/src/: A.cpp  simple.cpp
common/: Logger.hpp
examples/: Makefile  example.cu
examples/native_cuda_vec_add/: CMakeLists.txt  README.md  vec_add.cu
examples/native_vec_add/: CMakeLists.txt  README.md  build.sh  vec_add.cu
examples/raja_vec_add/: CMakeLists.txt  README.md  vec_add_raja.cu
pass/: CMakeLists.txt  RRPass.cpp
scripts/: GridSearch.py
src/: AVL.cpp  CMakeLists.txt  DeviceTraits.hpp  MemoryManager.hpp  MnemeInternal.hpp  MnemeMemory.hpp  MnemeMemoryHIP.hpp  MnemeRecord.hpp  MnemeRecordHIP.cpp  MnemeRecordHIP.hpp  Utils.hpp  common.cpp  common.hpp  device_types.hpp  jit.cpp  jit.hpp  libreplay.cpp  libreplayapp.cpp  macro.hpp  memory.cpp  memory.hpp  mneme_rt.cpp  record.cpp  replay.cpp
tests/: CMakeLists.txt  replay_test_runner.py  test_device_function.cpp  test_free.cpp  test_global.cpp  test_rdc_device_kernel.cpp  test_rdc_device_main.cpp  test_rdc_function.cpp  test_rdc_function_main.cpp  test_rdc_global_kernel.cpp  test_rdc_global_main.cpp  test_rdc_kernel.cpp  test_rdc_main.cpp  test_redirection.cpp  test_struct.cpp
